# EEMD

./: CMakeLists.txt  LICENSE.txt  README.md  go.sh  test.cpp  ung.txt
cmake/config/: AppleConfig.cmake  LinuxConfig.cmake
cmake/find/: .FindArmadillo.cmake.swp  FindNetCDF.cmake  FindOpenCV.cmake
data/: nc_write  ncw.c  simple_xy.nc  sschlor.ncom.GOMh0.04.012.nest1.2009101000_00000000.nc
eemdf90/: CMakeLists.txt  cppcall.cpp  cppeemd  eemd.f90  makefile  min_max.f90  natural_spline.f90  tempEEMD.ctl
eemdf90/test/: CMakeLists.txt  eemd.common  eemd.f90  gasdev.f90  newfort.txt  runEEMD.f90  standev.f90  test.cpp
eemdf90/test/inc/: cppcall.h
eemdf90/test/src/: CMakeLists.txt  cppcall.cpp
examples/: CMakeLists.txt  eemd_test.cpp  meemd_test.cpp
include/: eemd.h  eemd1d.h  matplotpp.h  meemd.h  spline_class.h  tools.h  typedefs.h  util.h
lib/: CMakeLists.txt  compute.cpp  eemd1d.cpp  meemd.cpp
src/: CMakeLists.txt  eemd.cpp  eemd1d.cpp  f90eemd_test.cpp  matplotpp.cc  meemd.cpp  spline_class.cpp  tools.cpp  util.cpp
